# neuron-viz

./: .gitignore  Caddyfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/api/: Dockerfile
docker/frontend/: Dockerfile
neuron_viz/api/: main.py
neuron_viz/frontend/: index.html  package-lock.json  package.json
requirements/: api.txt
