[project]
name = "neuron-viz"
version = "0.1.0"
description = "A simple Neuron visualization"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
mkdocs = "^1.6.1"



[tool.poetry.group.api.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.0"

